# python-project-lvl2

./: .gitignore  Makefile  README.md  core_logic.py  gendiff.py  pyproject.toml  pyproject.toml.save
.github/workflows/: README.md  gendiff_flow.yml
gendiff/: cli.py  core.py  diff_files.py  parser_files.py  stylish.py  test_diff.py  test_main.py
gendiff/scripts/: gendiff.py
gendiff/tests/fixture/: after_diff.txt
package/scripts/: gendiff.py
tests/: test_main.py
tests/fixture/: after_diff.txt  test_data1.yml  test_data2.yml
