[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI-programm for find diff two files"
authors = ["KirillP <foll11@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gendiff = "package.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
