[tool.poetry]
name = "hexlet-code"
version = "0.1.7"
description = "CLI-programm for find diff two files"
authors = ["KirillP <foll11@yandex.ru>"]
packages = [
	{ include = "gendiff"},
	]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^62.4.0"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.0"
coverage = "^6.4.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
